# ghostscanCLI

./: .gitignore  README.md  pyproject.toml
ghostscan/: __init__.py  __main__.py  cli.py  config.py  history.py  parser.py  recommendations.py  reporter.py  runtime.py  scanner.py  validation.py
ghostscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
results/: discover_192.168.8.0_24_20260316_055637.xml  discover_192.168.8.0_24_20260316_055924.xml  discover_192.168.8.0_24_20260316_061243.xml  discover_192.168.8.0_24_20260316_061718.xml  discover_192.168.8.0_24_20260318_152054.xml  discover_192.168.8.0_24_20260318_152637.json  discover_192.168.8.0_24_20260318_152637.xml  discover_scanme.nmap.org_20260316_040838.xml  discover_scanme.nmap.org_20260316_041126.json  discover_scanme.nmap.org_20260316_041126.xml  discover_scanme.nmap.org_20260316_041636.json  discover_scanme.nmap.org_20260316_041636.xml  discover_scanme.nmap.org_20260316_042446.xml  discover_scanme.nmap.org_20260316_043104.xml  full_192.168.8.151_20260318_153031.xml  latest.json  map_latest.json  map_quick_192.168.8.0_24.xml  map_service_192.168.8.0_24.xml  profile_web_scanme.nmap.org_20260316_045923.json  profile_web_scanme.nmap.org_20260316_045923.xml  profile_web_scanme.nmap.org_20260316_054344.json  profile_web_scanme.nmap.org_20260316_054344.xml  profile_web_scanme.nmap.org_20260316_055227.json  profile_web_scanme.nmap.org_20260316_055227.xml  quick_192.168.8.0_24_20260318_151307.xml  quick_192.168.8.10_20260318_153454.xml  quick_192.168.8.151_20260318_153251.json  (+21 more)
(+2 files in other folders)
