[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostscan"
version = "0.1.0"
description = "Guided Nmap CLI for reconnaissance and inventory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ghostscan = "ghostscan.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostscan*"]
